--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <div class="about__detail">
                         <div class="about__detail__content">
                             <div class="about__img">
-                                <img src="assests/img/about-img.jpeg" alt="">
+                                <img src="assests/img/about-img.jpg" alt="">
                             </div>
                             <div class="about__descripion">
                                 <p>Olá, eu sou Eduarda Costa , especialista em nail design. 
