add - agendamento - calendly

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                     <div class="hero__content">
                         <h1>Suas Unhas<br><span>em Grande estilo</span></h1>
                         <p>Venha conhecer meu Studio, e aproveite para agendar um horário.</p>
-                        <a href="https://wa.me/5588992793305" class="btn btn__outline"><i class='bx bxl-whatsapp'></i>agende seu horário</a>
+                        <a href="https://calendly.com/agendamento_eduarda_costa_nail" class="btn btn__outline"><i class='bx  bx-calendar-alt'  ></i>  Agende seu Horário Diretamente</a>
+                        <a href="https://wa.me/5588992793305" class="btn btn__outline"><i class='bx bxl-whatsapp'></i>Tem alguma dúvida? me mande uma mensagem!</a>
                     </div>
                 </div>
             </div>
@@ -339,7 +340,7 @@
                         <img src="assests/img/img-insta/foto8.jpg" alt="">
                     </div>
                 </div>
-                <button class="btn"><a href="https://www.instagram.com/eduarda._nail/">ver mais</a></button>
+                <button class="btn" id="btn-1"><a href="https://www.instagram.com/eduarda._nail/">ver mais</a></button>
             </div>
         </section>
         <section class="testimonials section">
