--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
                     <div class="hero__content">
                         <h1>Suas Unhas<br><span>em Grande estilo</span></h1>
                         <p>Venha conhecer meu Studio, e aproveite para agendar um horário.</p>
-                        <a href="https://calendly.com/agendamento_eduarda_costa_nail" class="btn btn__outline"><i class='bx  bx-calendar-alt'  ></i>  Agende seu Horário Diretamente</a>
-                        <a href="https://wa.me/5588992793305" class="btn btn__outline"><i class='bx bxl-whatsapp'></i>Tem alguma dúvida? me mande uma mensagem!</a>
+                        <a href="https://wa.me/5588994605946" class="btn btn__outline"><i class='bx bxl-whatsapp'></i>Me mande uma mensagem e Agende seu Horário!</a>
                     </div>
                 </div>
             </div>
@@ -478,5 +477,6 @@
      <ion-icon name="logo-whatsapp"></ion-icon>
  </a>
 </body>
+
 
 </html>
