Update_link_whats index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="hero__content">
                         <h1>Suas Unhas<br><span>em Grande estilo</span></h1>
                         <p>Venha conhecer meu Studio, e aproveite para agendar um horário.</p>
-                        <a href="https://wa.me/5588994605946" class="btn btn__outline"><i class='bx bxl-whatsapp'></i>Me mande uma mensagem e Agende seu Horário!</a>
+                        <a href="https://wa.me/5588994605946?text=Olá%21+vim+pelo+site+e+Gostaria+de+obter+mais+informações+sobre+seus+Serviços" class="btn btn__outline"><i class='bx bxl-whatsapp'></i>Me mande uma mensagem e Agende seu Horário!</a>
                     </div>
                 </div>
             </div>
@@ -480,3 +480,4 @@
 
 
 </html>
+
