Update link and number index.html

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                         <img src="assests/img/img-insta/foto8.jpg" alt="">
                     </div>
                 </div>
-                <button class="btn" id="btn-1"><a href="https://www.instagram.com/eduarda._nail/">ver mais</a></button>
+                <button class="btn" id="btn-1"><a href="https://www.instagram.com/eduarda._nail/" target="_blank>ver mais</a></button>
             </div>
         </section>
         <section class="testimonials section">
@@ -458,7 +458,7 @@
             </div>
             <div class="footer__data">
                 <h2>Contato</h2>
-                <p>(88) 99279-3305</p>
+                <p>(88) 99460-5946</p>
             </div>
         </div>
         <div class="copy">
@@ -480,4 +480,5 @@
 
 
 </html>
+
 
