--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
             </div>
             <div class="footer__data">
                 <h2>nosso endereço</h2>
-                <p>Rua Antonio Alves Costa, Zezinho Costa<br> Várzea - Alegre - CE</p>
+                <p>Zezinho Costa<br> Várzea - Alegre - CE</p>
             </div>
             <div class="footer__data">
                 <h2>nosso horario</h2>
@@ -480,5 +480,6 @@
 
 
 </html>
+
 
 
