--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                         <img src="assests/img/img-insta/foto8.jpg" alt="">
                     </div>
                 </div>
-                <button class="btn" id="btn-1"><a href="https://www.instagram.com/eduarda._nail/" target="_blank>ver mais</a></button>
+                <button class="btn" id="btn-1"><a href="https://www.instagram.com/eduarda._nail/" target="_blank">ver mais</a></button>
             </div>
         </section>
         <section class="testimonials section">
@@ -480,6 +480,7 @@
 
 
 </html>
+
 
 
 
