--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                 <h1><a href="#"><img src="assests/img/logo.png" alt=""></a></h1>
                 <div class="footer__data-social">
                     <a href="https://www.instagram.com/eduarda._nail/"><i class='bx bxl-instagram social__icon' ></i></a>
-                    <a href="https://wa.me/5588992793305"><i class='bx bxl-whatsapp social__icon' ></i></a>
+                    <a href="https://wa.me/5588994605946?text=Olá%21+vim+pelo+site+e+Gostaria+de+obter+mais+informações+sobre+seus+Serviços"><i class='bx bxl-whatsapp social__icon' ></i></a>
                 </div>
             </div>
             <div class="footer__data">
@@ -480,6 +480,7 @@
 
 
 </html>
+
 
 
 
